@@ -146,6 +146,12 @@ Sets the left margin, for those who might have specific formatting needs.
 When the game starts, load this saved game file.
 
 .TP
+.B \-m
+Enable mouse support.  Naturally, this is quite limited, but it's
+available for anyone who wants to experiment with it. When active, the
+mouse cannot be used to copy text from the terminal.
+
+.TP
 .B \-o
 Watch object movement.  This option enables debugging messages from the
 interpreter which describe the moving of objects in the object tree.
