@@ -12,6 +12,7 @@
 -I # interpreter number
 -l # left margin
 -L <file> load this save file
+-m   enable mouse support
 -o   watch object movement
 -O   watch object locating
 -p   plain ASCII output only
